@@ -202,7 +202,6 @@ class SQLRSERVER_DLLSPEC firebirdcursor : public sqlrservercursor {
 		
 		XSQLDA	ISC_FAR	*outsqlda;
 		fieldstruct	*field;
-		stringbuffer	fieldbuffer;
 
 		ISC_LONG	querytype;
 
@@ -1753,14 +1752,15 @@ void firebirdcursor::getField(uint32_t col,
 	// handle a null field
 	if ((outsqlda->sqlvar[col].sqltype & 1) && 
 			field[col].nullindicator==-1) {
-		*null=true;
-		return;
-	}
 
+		*null=true;
+
+	} else
 
 	// handle a non-null field
 	if (outsqlda->sqlvar[col].sqltype==SQL_TEXT ||
 			outsqlda->sqlvar[col].sqltype==SQL_TEXT+1) {
+
 		size_t	maxlen=outsqlda->sqlvar[col].sqllen;
 		size_t	reallen=charstring::length(field[col].textbuffer);
 		if (reallen>maxlen) {
@@ -1768,19 +1768,27 @@ void firebirdcursor::getField(uint32_t col,
 		}
 		*fld=field[col].textbuffer;
 		*fldlength=reallen;
-		return;
+
 	} else if (outsqlda->sqlvar[col].
 				sqltype==SQL_SHORT ||
 			outsqlda->sqlvar[col].
 				sqltype==SQL_SHORT+1) {
-		fieldbuffer.clear();
-		fieldbuffer.append(field[col].shortbuffer);
+
+		*fldlength=charstring::printf(field[col].textbuffer,
+						firebirdconn->maxitembuffersize,
+						"%hd",field[col].shortbuffer);
+		*fld=field[col].textbuffer;
+
 	} else if (outsqlda->sqlvar[col].
 				sqltype==SQL_FLOAT ||
 			outsqlda->sqlvar[col].
 				sqltype==SQL_FLOAT+1) {
-		fieldbuffer.clear();
-		fieldbuffer.append((double)field[col].floatbuffer);
+
+		*fldlength=charstring::printf(field[col].textbuffer,
+					firebirdconn->maxitembuffersize,
+					"%.4f",(double)field[col].floatbuffer);
+		*fld=field[col].textbuffer;
+
 	} else if (outsqlda->sqlvar[col].
 				sqltype==SQL_DOUBLE ||
 			outsqlda->sqlvar[col].
@@ -1789,12 +1797,17 @@ void firebirdcursor::getField(uint32_t col,
 				sqltype==SQL_D_FLOAT ||
 			outsqlda->sqlvar[col].
 				sqltype==SQL_D_FLOAT+1) {
-		fieldbuffer.clear();
-		fieldbuffer.append((double)field[col].doublebuffer);
+
+		*fldlength=charstring::printf(field[col].textbuffer,
+					firebirdconn->maxitembuffersize,
+					"%.4f",field[col].doublebuffer);
+		*fld=field[col].textbuffer;
+
 	} else if (outsqlda->sqlvar[col].
 				sqltype==SQL_VARYING ||
 			outsqlda->sqlvar[col].
 				sqltype==SQL_VARYING+1) {
+
 		// the first 2 bytes are the length in 
 		// an SQL_VARYING field
 		int16_t	size;
@@ -1803,7 +1816,6 @@ void firebirdcursor::getField(uint32_t col,
 				sizeof(int16_t));
 		*fld=field[col].textbuffer+sizeof(int16_t);
 		*fldlength=size;
-		return;
 
 	// Looks like sometimes firebird returns INT64's as
 	// SQL_LONG type.  These can be identified because
@@ -1814,8 +1826,12 @@ void firebirdcursor::getField(uint32_t col,
 			outsqlda->sqlvar[col].
 				sqltype==SQL_LONG+1) &&
 			!outsqlda->sqlvar[col].sqlscale) {
-		fieldbuffer.clear();
-		fieldbuffer.append((int32_t)field[col].longbuffer);
+
+		*fldlength=charstring::printf(field[col].textbuffer,
+					firebirdconn->maxitembuffersize,
+					"%d",field[col].longbuffer);
+		*fld=field[col].textbuffer;
+
 	} else if (
 	#ifdef SQL_INT64
 			(outsqlda->sqlvar[col].
@@ -1828,39 +1844,48 @@ void firebirdcursor::getField(uint32_t col,
 			outsqlda->sqlvar[col].
 				sqltype==SQL_LONG+1) &&
 			outsqlda->sqlvar[col].sqlscale)) {
+
 		// int64's are weird.  To the left of the decimal
 		// point is the value/10^scale, to the right is
 		// value%10^scale
-		fieldbuffer.clear();
 		if (outsqlda->sqlvar[col].sqlscale) {
-
-			fieldbuffer.append((int64_t)(field[col].int64buffer/(int)pow(10.0,(double)-outsqlda->sqlvar[col].sqlscale)))->append(".");
 
 			stringbuffer	decimal;
 			decimal.append((int64_t)(field[col].int64buffer%(int)pow(10.0,(double)-outsqlda->sqlvar[col].sqlscale)));
 		
 			// gotta get the right number
 			// of decimal places
-			for (int32_t i=charstring::length(
-					decimal.getString());
+			for (int32_t i=decimal.getStringLength();
 				i<-outsqlda->sqlvar[col].sqlscale;
 				i++) {
 				decimal.append("0");
 			}
-			fieldbuffer.append(decimal.getString());
+
+			*fldlength=charstring::printf(
+					field[col].textbuffer,
+					firebirdconn->maxitembuffersize,
+					"%lld.%s",(int64_t)(field[col].int64buffer/(int)pow(10.0,(double)-outsqlda->sqlvar[col].sqlscale)),decimal.getString());
+			*fld=field[col].textbuffer;
 		} else {
-			fieldbuffer.append((int64_t)field[col].int64buffer);
+			*fldlength=charstring::printf(
+					field[col].textbuffer,
+					firebirdconn->maxitembuffersize,
+					"%lld",(int64_t)field[col].int64buffer);
+			*fld=field[col].textbuffer;
 		}
+
 	} else if (outsqlda->sqlvar[col].sqltype==SQL_ARRAY ||
 		outsqlda->sqlvar[col].sqltype==SQL_ARRAY+1 ||
 		outsqlda->sqlvar[col].sqltype==SQL_QUAD ||
 		outsqlda->sqlvar[col].sqltype==SQL_QUAD+1) {
+
 		// FIXME: handle arrays for real here...
 		*null=true;
-		return;
+
 	#ifdef SQL_TIMESTAMP
 	} else if (outsqlda->sqlvar[col].sqltype==SQL_TIMESTAMP ||
 		outsqlda->sqlvar[col].sqltype==SQL_TIMESTAMP+1) {
+
 		// decode the timestamp
 		tm	entry_timestamp;
 		isc_decode_timestamp(&field[col].timestampbuffer,
@@ -1874,9 +1899,12 @@ void firebirdcursor::getField(uint32_t col,
 		isc_decode_date(&field[col].timestampbuffer,
 						&entry_timestamp);
 	#endif
+
 		// build a string of "yyyy-mm-dd hh:mm:ss" format
-		char	buffer[20];
-		charstring::printf(buffer,20,
+		//char	buffer[20];
+		//charstring::printf(buffer,20,
+		*fldlength=charstring::printf(field[col].textbuffer,
+					firebirdconn->maxitembuffersize,
 					"%d-%02d-%02d %02d:%02d:%02d",
 					entry_timestamp.tm_year+1900,
 					entry_timestamp.tm_mon+1,
@@ -1884,49 +1912,50 @@ void firebirdcursor::getField(uint32_t col,
 					entry_timestamp.tm_hour,
 					entry_timestamp.tm_min,
 					entry_timestamp.tm_sec);
-		fieldbuffer.clear();
-		fieldbuffer.append(buffer);
+		*fld=field[col].textbuffer;
+
 	#ifdef SQL_TIMESTAMP
 	} else if (outsqlda->sqlvar[col].sqltype==SQL_TYPE_TIME ||
 		outsqlda->sqlvar[col].sqltype==SQL_TYPE_TIME+1) {
+
 		// decode the time
 		tm	entry_time;
 		isc_decode_sql_time(&field[col].timebuffer,
 						&entry_time);
 		// build a string of "hh:mm:ss" format
-		char	buffer[9];
-		charstring::printf(buffer,9,
+		//char	buffer[9];
+		//charstring::printf(buffer,9,
+		*fldlength=charstring::printf(field[col].textbuffer,
+					firebirdconn->maxitembuffersize,
 					"%02d:%02d:%02d",
 					entry_time.tm_hour,
 					entry_time.tm_min,
 					entry_time.tm_sec);
-		fieldbuffer.clear();
-		fieldbuffer.append(buffer);
+		*fld=field[col].textbuffer;
+
 	} else if (outsqlda->sqlvar[col].sqltype==SQL_TYPE_DATE ||
 		outsqlda->sqlvar[col].sqltype==SQL_TYPE_DATE+1) {
+
 		// decode the date
 		tm	entry_date;
 		isc_decode_sql_date(&field[col].datebuffer,
 						&entry_date);
 		// build a string of "yyyy-mm-dd" format
-		char	buffer[11];
-		charstring::printf(buffer,11,
+		//char	buffer[11];
+		//charstring::printf(buffer,11,
+		*fldlength=charstring::printf(field[col].textbuffer,
+					firebirdconn->maxitembuffersize,
 					"%d:%02d:%02d",
 					entry_date.tm_year+1900,
 					entry_date.tm_mon+1,
 					entry_date.tm_mday);
-		fieldbuffer.clear();
-		fieldbuffer.append(buffer);
+		*fld=field[col].textbuffer;
+
 	#endif
 	} else if (outsqlda->sqlvar[col].sqltype==SQL_BLOB ||
 			outsqlda->sqlvar[col].sqltype==SQL_BLOB+1) {
 		*blob=true;
-		return;
 	}
-
-	// for any case that didn't return already, we need to do this...
-	*fld=fieldbuffer.getString();
-	*fldlength=fieldbuffer.getStringLength();
 }
 
 bool firebirdcursor::getLobFieldLength(uint32_t col, uint64_t *length) {
