@@ -21,6 +21,9 @@
 	mysql drop-in library supports date/time/datetime binds now instead of
 		just treating them all as datetimes
 	mysql drop-in library supports negative times now
+	added result set row translation module framework
+	updated firebird connection module to  the fieldstruct.textbuffer
+		instead of fieldbuffer for non-text to text translations
 
 0.66.0 - fixed mysql set isolation level query
 	updated mysql connection to run commit/rollback at the end of every
